I fixed the giant gap to the right

--- a/project4/styles.css
+++ b/project4/styles.css
@@ -1,51 +1,34 @@
-/* p,button {
-    font-size: 300%;
-}
-
-.button-reset {
-    background: transparent;
-    border: 0
-}
-*/
-
 .topnav {
-    font-family: helvetica, arial, verdana, tahoma, sans-serif
+    text-align: center;
+    line-height: 20px;
+    font-family: helvetica, arial, Verdana, Tahoma, sans-serif;
 }
 
 h1 {
     text-align: center;
-    font-style: bold;
-    font-family: 'Playfair Display', 'Abril Fatface', 'Cinzel', Times 'Times New Roman', Times, serif;
-}
-
-.conferenceinfo {
-    font-style: bold;
+    font-family: helvetica, arial, Verdana, Tahoma, sans-serif;
 }
 
 body {
+    background-color: rgb(161, 194, 162);
     margin: 0;
+    font-family: helvetica, arial, Verdana, Tahoma, sans-serif;
 }
 
-nav ul li {
+.topnav li {
     color: white;
     padding: 20px;
     font-weight: bold;
     display: inline-block;
     list-style: none;
     text-align: center;
-    position: center;
 }
 
-h2 ul li {
+.underheading li {
     list-style: none;
-    display: style: inherit;
-}
-
-.container {
-    max-width: 100%;
-    margin: 0;
-    background-color: rgb(223, 231, 219);
-    height: 100vh;
+    font-family: helvetica, arial, Verdana, Tahoma, sans-serif;
+    text-align: center;
+    line-height: 125%;
 }
 
 img {
@@ -54,35 +37,22 @@ img {
 }
 
 svg {
-    width: 3%;
+    width: 45px;
+    height: auto;
 }
 
 footer {
+    text-align: right;
+    line-height: 40px;
+    margin-top: 1%;
+    position: relative;
     font-family: helvetica, arial, Verdana, Tahoma, sans-serif;
 }
 
-/*help ->*/
-li {
-    position: center;
+.textbody {
+    line-height: 20px;
+    margin-top: 2%;
+    width: 100%;
 }
 
-@media (max-width: 800px) {
-    svg {
-        width: 10%;
-    }
-}
-
-@media (max-width: 420px) {
-    h1 {
-        font-size: 25px;
-    }
-
-    li {
-        font-size: 20px;
-    }
-}
-
-@media (max-width: 375px) {
-    svg {
-        width: 15%;
-    }
+/* google web fonts/ system fonts can work on mobile for seriff legibility on mobile*/
